# mesh2nvdb

./: .gitignore  CMakeLists.txt  example.py  setup.py
.github/workflows/: wheel.yml
cmake/: openvdb.cmake  openvdb_CMakeLists.txt  zlib.cmake
src/: main.cpp  mesh2nvdb.cpp
